added new image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet" />
   <title>Countdown</title>
+  <link rel="stylesheet" href="./styles.css">
   <script>
     const start = new Date(Date.UTC(2023, 6, 11, 17, 0, 0));
     const end = new Date(Date.UTC(2023, 6, 20, 16, 13, 0));
@@ -15,105 +16,23 @@
     const releaseNotes = [
     ];
   </script>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    html {
-      font-family: "Roboto", sans-serif;
-    }
-
-    body {
-      margin: 0;
-    }
-
-    .maintenance {
-      min-height: 100vh;
-      margin: 0 auto;
-      display: flex;
-      gap: 30px;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column-reverse;
-      padding: 35px 20px;
-    }
-
-    .maintenance__content {
-      width: 100%;
-    }
-
-    .maintenance__wrapper h1 {
-      font-size: 24px;
-      font-weight: 500;
-      line-height: 1.2;
-      text-align: center;
-      margin-bottom: 28px;
-    }
-
-    .maintenance__countdown {
-      font-weight: 500;
-      margin-bottom: 12px;
-      display: flex;
-      justify-content: space-between;
-      font-size: 14px;
-    }
-
-    .maintenance__progress {
-      display: block;
-      height: 12px;
-      width: 100%;
-      overflow: hidden;
-      margin-bottom: 35px;
-      border-radius: 17px;
-      background-color: #efefef;
-    }
-
-    .maintenance__progressBar {
-      display: block;
-      height: 100%;
-      background-color: #209550;
-      width: 0;
-      border-radius: 17px;
-      transition: width 0.2s;
-    }
-
-    @media screen and (min-width: 998px) {
-      .maintenance {
-        flex-direction: row;
-      }
-
-      .maintenance__wrapper h1 {
-        font-size: 48px;
-        text-align: left;
-      }
-
-      .maintenance__countdown {
-        font-size: 16px;
-      }
-
-      .maintenance__list div {
-        font-size: 20px;
-      }
-    }
-
-    @media screen and (min-width: 1440px) {
-      .maintenance__wrapper h1 {
-        margin-bottom: 70px;
-      }
-
-      .maintenance__progress {
-        margin-bottom: 60px;
-      }
-    }
-  </style>
 </head>
 
 <body>
   <div class="maintenance">
     <div class="maintenance__content">
+
       <div class="maintenance__wrapper">
-        <h1>До отьезда из Львова</h1>
+        <h2>Обсуждаем поездку:</h2>
+
+        <div class="maintenance__imgs">
+          <img src="./img/1.jpeg" alt="">
+        </div>
+      </div>
+
+      <div class="maintenance__wrapper">
+        <h2>До отьезда из Львова</h2>
+
         <div class="maintenance__countdown">
           Time left
           <span id="countdown"></span>
@@ -124,7 +43,8 @@
 
       </div>
       <div class="maintenance__wrapper">
-        <h1>Самолет из Польши через:</h1>
+        <h2>Самолет из Польши через:</h2>
+
         <div class="maintenance__countdown">
           Time left
           <span id="countdownAir"></span>
