--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet" />
-  <title>Countdown</title>
+  <title>Girls Trip</title>
+
+  <meta property="og:image"  content="./img/1.jpeg">
+  <meta name="twitter:image" content="./img/1.jpeg">
+
   <link rel="stylesheet" href="./styles.css">
   <script>
     const start = new Date(Date.UTC(2023, 6, 11, 17, 0, 0));
