--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet" />
   <title>Girls Trip</title>
 
-  <meta property="og:image"  content="./img/1.jpeg">
+  <meta property="og:image" content="./img/1.jpeg">
   <meta name="twitter:image" content="./img/1.jpeg">
+  <script src="https://cdn.aerisapi.com/sdk/js/latest/aerisweather.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.aerisapi.com/sdk/js/latest/aerisweather.css">
 
   <link rel="stylesheet" href="./styles.css">
   <script>
@@ -59,6 +61,7 @@
       </div>
     </div>
 
+    <div id="weather"></div>
   </div>
 
   <script>
@@ -150,6 +153,24 @@
 
     initializeClock(start, end);
     initializeAirClock(start, endAir);
+
+    window.onload = function () {
+
+      fetch('https://api.openweathermap.org/data/2.5/weather?q=Corfu&appid=7c97e8fad4900fac1fc228f5bd7d97d1&units=metric')
+        .then(response => response.json())
+        .then(data => {
+          const weatherDiv = document.getElementById('weather');
+          weatherDiv.innerHTML = `
+          <p>Location: ${data.name}</p>
+          <p>Temperature: ${data.main.temp}°C</p>
+          <p>Description: ${data.weather[0].description}</p>
+        `;
+        })
+        .catch(error => {
+          console.log(error);
+        });
+
+    };
   </script>
 </body>
 
